wanna set header to position fixed but failed ( after setting position fix, the next section just goes to the top and hidden by header. gonna find way to fix it...)

--- a/less/index.less
+++ b/less/index.less
@@ -77,7 +77,10 @@ a.white-button{
 
 /* header */
 #header{
+  
+  z-index: 10;
   background: white;
+  width: 100%;
   #logo{
     float: left;
   }
